trying to fix the screenshot text stretched logo

--- a/plugins/Morpheus/stylesheets/theme.less
+++ b/plugins/Morpheus/stylesheets/theme.less
@@ -15,14 +15,6 @@ body {
     font-family: Verdana, sans-serif;
 }
 
-#logo  {
-    img.default-piwik-logo {
-        height: 40px;
-        width: 82px;
-        margin-top: 4px;
-    }
-}
-
 .pageWrap {
     padding-left: 10px;
     padding-right: 10px;
