--- a/plugins/Zeitgeist/stylesheets/ui/_header.less
+++ b/plugins/Zeitgeist/stylesheets/ui/_header.less
@@ -17,9 +17,8 @@
 
   #logo  {
     img.default-piwik-logo {
-      height: 40px;
       width: 82px;
-      margin-top: 4px;
+      margin-top: 14px;
     }
   }
 
